# ucx-transport-perf

./: CMakeLists.txt  README.md  bench.cpp  client.cpp  constexpr_header.h  main.cpp  server.cpp
cmake/: ConfigureUCX.cmake  DefineVersions.cmake  FindUCX.cmake  UCX.CMakeLists.txt.cmake
conda/recipes/blazingdb-communication/: build.sh
include/blazingdb/uc/: API.hpp  Agent.hpp  Buffer.hpp  Capabilities.hpp  Context.hpp  Record.hpp  Trader.hpp  Transport.hpp
include/blazingdb/util/: macros.hpp
include/blazingsql/: api.hpp  status.h
include/blazingsql/concurrency/: thread_pool.hpp
include/blazingsql/network/: client.hpp  message.hpp  server.hpp  socket.hpp
include/blazingsql/utils/: helper_timer.h  logger.h  macros.h  result.h  server_process.h  timer.h
src/: socket.cpp
src/blazingdb/uc/: Capabilities.cpp  Context.cpp  ContextHelpers.cpp
src/blazingdb/uc/internal/: ManagedContext.cpp  ManagedContext.hpp  Resource.hpp  TCPContext.hpp  ViewContext.cpp  ViewContext.hpp  macros.hpp  resources.hpp
src/blazingdb/uc/internal/agents/: AddressableAgent.cpp  AddressableAgent.hpp  ManagedAgent.cpp  ManagedAgent.hpp  TCPAgent.hpp  ViewAgent.cpp  ViewAgent.hpp
src/blazingdb/uc/internal/buffers/: AccessibleBuffer.hpp  AllocatedBuffer.hpp  LinkerBuffer.cpp  LinkerBuffer.hpp  ReferenceBuffer.hpp  RemoteBuffer.cpp  RemoteBuffer.hpp  TCPBuffer.hpp  ViewBuffer.cpp  ViewBuffer.hpp
src/blazingdb/uc/internal/buffers/records/: RemotableRecord.cpp  RemotableRecord.hpp
src/blazingdb/uc/internal/buffers/transports/: ZCopyTransport.cpp  ZCopyTransport.hpp
